# Elegance

./: AUTHORS  Makefile.am  README  TODO  configure.ac  script_init
data/: Makefile.am
data/desktop/: Makefile.am  elegance.desktop
data/themes/: Makefile.am  elegance.edc
data/tools/: Makefile.am
