AUTOMAKE_OPTIONS     = 1.4 foreign
MAINTAINERCLEANFILES = Makefile.in

filesdir = $(datadir)/elegance/tools
files_DATA = \
box-b.png \
clock-b.png \
rect-s.png \
text-s.png \
box-s.png \
clock-s.png \
table-b.png  \
video-b.png \
button-b.png \
icon-b.png \
table-s.png \
video-s.png \
button-s.png \
icon-s.png \
rect-b.png \
text-b.png \
bubble-b.png \
bubble-s.png \
calendar-b.png \
calendar-s.png \
textblock-b.png \
textblock-s.png

EXTRA_DIST = $(files_DATA)
